--- a/app/src/main/res/layout/activity_new_project.xml
+++ b/app/src/main/res/layout/activity_new_project.xml
@@ -216,7 +216,7 @@
 <!--                android:hint="Is any water body near to you?"-->
 <!--                android:textAlignment="center" />-->
             <EditText
-                android:id="@+id/crp"
+                android:id="@+id/sbc"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_gravity="center_horizontal"
@@ -225,7 +225,7 @@
                 android:inputType="numberDecimal"
                 android:layout_marginTop="10dp"
                 android:background="@drawable/cardborder"
-                android:hint="Please enter soil test SBP (Optional)"
+                android:hint="Please enter soil test SBC Value"
                 android:textAlignment="center" />
             <LinearLayout
                 android:layout_width="match_parent"
