--- a/app/src/main/res/layout/activity_project_progress.xml
+++ b/app/src/main/res/layout/activity_project_progress.xml
@@ -154,13 +154,13 @@
                         android:layout_marginLeft="10dp"
                         android:layout_marginTop="8dp"
                         android:layout_marginRight="10dp"
-                        android:src="@drawable/soil"/>
+                        android:src="@drawable/vasthu"/>
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textSize="24dp"
                         android:textAlignment="center"
-                        android:text="Soil Tests"/>
+                        android:text=" Vaastu"/>
 
                 </LinearLayout>
 
