--- a/app/src/main/res/layout/projectlayout.xml
+++ b/app/src/main/res/layout/projectlayout.xml
@@ -53,6 +53,13 @@
             android:textAlignment="center"
             android:textColor="@color/black"/>
 
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:layout_gravity="center"
+            android:id="@+id/book"
+            android:text="Book"/>
 
 
     </LinearLayout>
