--- a/app/src/main/res/layout/activity_new_project.xml
+++ b/app/src/main/res/layout/activity_new_project.xml
@@ -74,37 +74,37 @@
 
         </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:orientation="horizontal">
-                <EditText
-                    android:id="@+id/length"
-                    android:layout_width="wrap_content"
-                    android:layout_height="50dp"
-                    android:layout_weight="2"
-                    android:inputType="number"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginLeft="30dp"
-                    android:layout_marginRight="30dp"
-                    android:background="@drawable/cardborder"
-                    android:hint="   Length"
-                    android:textAlignment="center" />
-                <EditText
-                    android:id="@+id/Breadth"
-                    android:layout_width="wrap_content"
-                    android:layout_height="50dp"
-                    android:layout_weight="2"
-                    android:inputType="number"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginLeft="30dp"
-                    android:layout_marginRight="30dp"
-                    android:background="@drawable/cardborder"
-                    android:hint="  Breath"
-                    android:textAlignment="center" />
+<!--            <LinearLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginTop="20dp"-->
+<!--                android:orientation="horizontal">-->
+<!--                <EditText-->
+<!--                    android:id="@+id/length"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="50dp"-->
+<!--                    android:layout_weight="2"-->
+<!--                    android:inputType="number"-->
+<!--                    android:layout_gravity="center_horizontal"-->
+<!--                    android:layout_marginLeft="30dp"-->
+<!--                    android:layout_marginRight="30dp"-->
+<!--                    android:background="@drawable/cardborder"-->
+<!--                    android:hint="   Length"-->
+<!--                    android:textAlignment="center" />-->
+<!--                <EditText-->
+<!--                    android:id="@+id/Breadth"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="50dp"-->
+<!--                    android:layout_weight="2"-->
+<!--                    android:inputType="number"-->
+<!--                    android:layout_gravity="center_horizontal"-->
+<!--                    android:layout_marginLeft="30dp"-->
+<!--                    android:layout_marginRight="30dp"-->
+<!--                    android:background="@drawable/cardborder"-->
+<!--                    android:hint="  Breath"-->
+<!--                    android:textAlignment="center" />-->
 
-            </LinearLayout>
+<!--            </LinearLayout>-->
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -180,28 +180,28 @@
 <!--                        android:text=" Plain Region"/>-->
 <!--                </LinearLayout>-->
 <!--            </LinearLayout>-->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:orientation="horizontal"
-                android:layout_marginLeft="25dp"
-                android:layout_marginRight="25dp"
-                android:layout_gravity="center"
-                android:gravity="center_horizontal"
-                android:layout_marginTop="10dp">
-                <Switch
-                    android:id="@+id/switch1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:switchMinWidth="60dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="7dp"
-                    android:text="Is any water body near to you?"
-                    android:checked="true"
-                    android:textOff="OFF"
-                    android:textOn="ON"/>
+<!--            <LinearLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="40dp"-->
+<!--                android:orientation="horizontal"-->
+<!--                android:layout_marginLeft="25dp"-->
+<!--                android:layout_marginRight="25dp"-->
+<!--                android:layout_gravity="center"-->
+<!--                android:gravity="center_horizontal"-->
+<!--                android:layout_marginTop="10dp">-->
+<!--                <Switch-->
+<!--                    android:id="@+id/switch1"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:switchMinWidth="60dp"-->
+<!--                    android:layout_marginLeft="10dp"-->
+<!--                    android:layout_marginTop="7dp"-->
+<!--                    android:text="Is any water body near to you?"-->
+<!--                    android:checked="true"-->
+<!--                    android:textOff="OFF"-->
+<!--                    android:textOn="ON"/>-->
 
-            </LinearLayout>
+<!--            </LinearLayout>-->
 
 <!--            <CheckBox-->
 <!--                android:id="@+id/budget"-->
