--- a/app/src/main/res/layout/onboard2.xml
+++ b/app/src/main/res/layout/onboard2.xml
@@ -33,40 +33,42 @@
         android:layout_height="wrap_content">
 
         <LinearLayout
-            android:layout_centerVertical="true"
-            android:orientation="vertical"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
 
-            android:layout_height="wrap_content">
+            android:orientation="vertical">
 
             <ImageView
+                android:id="@+id/img1"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:src="@drawable/abc"
-                android:id="@+id/img1"/>
+                android:src="@drawable/abc" />
+
             <ImageView
+                android:id="@+id/img2"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:src="@drawable/cli"
-                android:id="@+id/img2"/>
+                android:src="@drawable/cli" />
+
             <ImageView
+                android:id="@+id/img3"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:src="@drawable/is"
-                android:id="@+id/img3"/>
+                android:src="@drawable/is" />
 
             <TextView
                 android:id="@+id/tv_header"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:gravity="center"
                 android:layout_marginTop="34dp"
+                android:drawableRight="@drawable/ic_baseline_preview_24"
+                android:fontFamily="@font/montserrat_subrayada"
+                android:gravity="center"
                 android:paddingLeft="@dimen/ob_desc_padding"
                 android:paddingRight="@dimen/ob_desc_padding"
                 android:text="@string/ob_header1"
                 android:textAllCaps="true"
-                android:fontFamily="@font/montserrat_subrayada"
-                android:drawableRight="@drawable/ic_baseline_preview_24"
                 android:textColor="#ffffff"
                 android:textSize="@dimen/ob_header_text_size" />
 
@@ -75,15 +77,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
                 android:gravity="center"
                 android:paddingLeft="@dimen/ob_desc_padding"
                 android:paddingRight="@dimen/ob_desc_padding"
                 android:text="@string/ob_desc1"
                 android:textColor="#ffffff"
-                android:layout_marginBottom="20dp"
 
                 android:textSize="@dimen/ob_desc_text_size" />
-
 
 
         </LinearLayout>
