--- a/app/src/main/res/layout/activity_bank_list_screen.xml
+++ b/app/src/main/res/layout/activity_bank_list_screen.xml
@@ -6,6 +6,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".BankLIstScreen">
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:id="@+id/schemes"
+        android:layout_marginTop="50dp"
+        android:text="Show Housing Schemes"/>
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
