--- a/app/src/main/res/layout/activity_budget_analysis.xml
+++ b/app/src/main/res/layout/activity_budget_analysis.xml
@@ -19,13 +19,24 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="300dp"
+            android:layout_height="650dp"
                 android:orientation="horizontal">
                 <ListView
                     android:id="@+id/list"
                     android:layout_width="wrap_content"
                     android:layout_weight="1"
                     android:layout_height="match_parent"/>
+                <ListView
+                    android:id="@+id/listunit"
+                    android:layout_width="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent"/>
+                <ListView
+                    android:id="@+id/listq"
+                    android:layout_width="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent"/>
+
                 <ListView
                     android:id="@+id/listval"
                     android:layout_width="wrap_content"
