--- a/app/src/main/res/layout/activity_new_project.xml
+++ b/app/src/main/res/layout/activity_new_project.xml
@@ -73,6 +73,17 @@
                 android:layout_weight="1"/>
 
         </LinearLayout>
+            <EditText
+                android:id="@+id/budget"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginLeft="30dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginRight="30dp"
+                android:background="@drawable/cardborder"
+                android:hint="Budget"
+                android:textAlignment="center" />
 
 <!--            <LinearLayout-->
 <!--                android:layout_width="match_parent"-->
@@ -106,19 +117,7 @@
 
 <!--            </LinearLayout>-->
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_marginLeft="25dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginRight="25dp"
-                android:background="@drawable/cardborder"
-                android:layout_height="wrap_content">
-                <Spinner
-                    android:id="@+id/landtype"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:hint="Select your area type" />
-            </LinearLayout>
+
 
 <!--            <TextView-->
 <!--                android:layout_width="wrap_content"-->
@@ -227,10 +226,23 @@
                 android:background="@drawable/cardborder"
                 android:hint="Please enter soil test SBC Value"
                 android:textAlignment="center" />
+            <EditText
+                android:id="@+id/filledstate"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:inputType="numberDecimal"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/cardborder"
+                android:hint="Enter State"
+                android:textAlignment="center" />
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_marginLeft="25dp"
                 android:layout_marginTop="10dp"
+                android:visibility="gone"
                 android:layout_marginRight="25dp"
                 android:background="@drawable/cardborder"
                 android:layout_height="wrap_content">
