--- a/app/src/main/res/layout/houselist_item.xml
+++ b/app/src/main/res/layout/houselist_item.xml
@@ -42,6 +42,11 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
             android:id="@+id/title"
             android:textStyle="bold"
             android:layout_marginLeft="10dp"/>
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:id="@+id/budgetim"
+            android:src="@drawable/ic_baseline_policy_24"/>
         <RatingBar
             android:id="@+id/rating"
             android:layout_width="wrap_content"
@@ -49,6 +54,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
             style="@style/Widget.AppCompat.RatingBar.Indicator"
             android:rating="0.5"
             android:numStars="1"
+            android:visibility="gone"
             android:layout_marginBottom="10dp"
             >
 
@@ -58,6 +64,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
             android:layout_height="wrap_content"
             android:text="3"
             android:textSize="22dp"
+            android:visibility="gone"
             android:layout_marginRight="15dp"
             android:layout_marginTop="0dp"
             android:textStyle="bold"
