--- a/app/src/main/res/layout/projectlayout.xml
+++ b/app/src/main/res/layout/projectlayout.xml
@@ -12,17 +12,32 @@
         android:orientation="vertical"
         android:layout_marginLeft="25dp"
         android:layout_marginRight="25dp"
-        android:background="@drawable/cardborder3"
+        android:background="@drawable/cardborder2"
         android:layout_height="match_parent">
-        <TextView
-            android:id="@+id/proj_title"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text=" Name"
-            android:textSize="20dp"
-            android:textStyle="bold"
-            android:textAlignment="center"
-            android:textColor="@color/black"/>
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/proj_title"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text=" Name"
+                android:textSize="20dp"
+                android:layout_weight="1"
+                android:textStyle="bold"
+                android:textAlignment="center"
+                android:textColor="@color/black"/>
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:id="@+id/budgetim"
+                android:layout_marginRight="10dp"
+                android:src="@drawable/ic_baseline_policy_24"/>
+        </LinearLayout>
+
 
         <TextView
             xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -59,7 +74,7 @@
             android:layout_margin="20dp"
             android:layout_gravity="center"
             android:id="@+id/book"
-            android:text="Book"/>
+            android:text="Select"/>
 
 
     </LinearLayout>
