--- a/app/src/main/res/layout/activity_budget_analysis.xml
+++ b/app/src/main/res/layout/activity_budget_analysis.xml
@@ -12,6 +12,14 @@
             android:layout_height="match_parent"
                 android:orientation="vertical">
 
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:src="@drawable/modipic"
+                    android:layout_margin="10dp"
+                        android:id="@+id/yojana"/>
+
                 <com.github.mikephil.charting.charts.PieChart
                     android:id = "@+id/pieChart"
                     android:layout_width = "match_parent"
