--- a/app/src/main/res/layout/activity_specifications_screen.xml
+++ b/app/src/main/res/layout/activity_specifications_screen.xml
@@ -54,6 +54,7 @@
                 android:textColor="#5B5B5B"
                 android:textSize="15sp"
                 android:textStyle="bold"
+                android:id="@+id/bedrooms"
                 android:inputType="number"
                 tools:ignore="TouchTargetSizeCheck" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -76,6 +77,7 @@
                 android:layout_height="55dp"
                 android:textColor="#5B5B5B"
                 android:textSize="15sp"
+                android:id="@+id/bathrooms"
                 android:textStyle="bold"
                 android:inputType="number"
                 tools:ignore="TouchTargetSizeCheck" />
